# rapids-cmake

./: .clang-format  .gersemirc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  RAPIDS.cmake  RAPIDS_BRANCH  README.md  VERSION  cmake-format-rapids-cmake.json  dependencies.yaml  init.cmake  pyproject.toml  rapids-cmake.cmake  rapids-export.cmake  rapids-find.cmake
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ops-bot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: branch-workflow.yaml  build.yaml  nightly-workflow.yaml  pr-workflow.yaml  pr.yaml  test.yaml
ci/: build_cpp.sh  build_docs.sh  build_wheel_gersemi_rapids_cmake.sh  check_style.sh  regenerate_stubs.py  test_cpp.sh  test_wheel_gersemi_rapids_cmake.sh
ci/checks/: copyright.py  gersemi.sh  run-cmake-format.sh  style.sh
ci/docs/: build.sh
ci/gpu/: build.sh
ci/release/: update-version.sh
cmake/: build_type.cmake  make_global.cmake  support_conda_env.cmake
cuda/: init_architectures.cmake  init_runtime.cmake  set_architectures.cmake
cuda/detail/: detect_architectures.cmake
docs/: api.rst  basics.rst  conf.py  cpm.rst  dependency_tracking.rst  index.rst
docs/command/: rapids_cmake_check_conda_env.rst  rapids_cmake_compute_json_matrix_product.rst  rapids_cmake_default_install_component.rst  rapids_cython_set_lib_dirs.rst  rapids_json_array_append.rst  rapids_json_array_extend.rst  rapids_json_compute_matrix_product.rst
example/: CMakeLists.txt
examples/: README.md
examples/conda-support/: CMakeLists.txt  lib.cu  main.cu
examples/cuda-features/: CMakeLists.txt  main.cu
examples/export-feature/: CMakeLists.txt  lib.cu
examples/find-generate-module/: CMakeLists.txt  lib.cpp
examples/offline_build/: CMakeLists.txt  generate_offline_source_cache.sh  use_offline_source_cache.sh
examples/offline_build/src/: CMakeLists.txt  main.cu
examples/pin-dependencies/: CMakeLists.txt  CMakePresets.json  main.cu  pins.json  update_pins.sh
examples/project-bootstrap/: CMakeLists.txt  lib.cu  main.cu
examples/project-bootstrap/cmake/: RAPIDS.cmake  rapids_config.cmake
examples/project-override/: CMakeLists.txt  CMakePresets.json  main.cu  override.json
examples/thirdparty-dependencies/: CMakeLists.txt  lib.cpp  main.cpp
examples/thirdparty-dependencies/cmake/patches/: spdlog_readme.patch
examples/version-header/: CMakeLists.txt  lib.cpp  main.cpp
examples/version-header/include/version_example/: version_example.hpp
export/: cpm.cmake  export.cmake  package.cmake  write_dependencies.cmake
export/template/: config.cmake.in  cpm.cmake.in  dependencies.cmake.in
find/: generate_module.cmake
python/gersemi-rapids-cmake/: MANIFEST.in  README.md  pyproject.toml
rapids-cmake/: rapids-cmake.cmake  rapids-cpm.cmake  rapids-cuda.cmake  rapids-cython-core.cmake  rapids-cython.cmake  rapids-export.cmake  rapids-find.cmake  rapids-json.cmake  rapids-test.cmake  rapids-version.cmake
rapids-cmake/cmake/: bin2c.cmake  build_type.cmake  check_conda_env.cmake  compute_json_matrix_product.cmake  default_install_component.cmake  default_install_component_hook.cmake  download_with_retry.cmake  install_lib_dir.cmake  make_global.cmake  parse_version.cmake  support_conda_env.cmake  write_git_revision_file.cmake  write_version_file.cmake
rapids-cmake/cpm/: bs_thread_pool.cmake  cccl.cmake  cuco.cmake  (+19 more)
rapids-cmake/test/detail/generate_resource_spec/: CMakeLists.txt  generate_resource_spec.cpp
testing/: CMakeLists.txt
testing/cmake/default_install_component/: CMakeLists.txt  check_installed_components.cmake
testing/cmake/default_install_component-sibling-default/: CMakeLists.txt  check_installed_components.cmake
testing/cmake/default_install_component-sibling-default/a_default_dependency/: CMakeLists.txt  a_default_dependency.txt
testing/cmake/default_install_component-sibling-default/b_default_dependency/: CMakeLists.txt  b_default_dependency.txt
testing/cmake/default_install_component-sibling-mixed/: CMakeLists.txt  check_installed_components.cmake
testing/cmake/default_install_component-sibling-mixed/default_dependency/: CMakeLists.txt  default_dependency.txt
testing/cmake/default_install_component-sibling-mixed/mixed_dependency/: CMakeLists.txt
testing/cmake/default_install_component-sibling-mixed/mixed_dependency/specified_dependency/: CMakeLists.txt  specified_dependency.txt
testing/cmake/default_install_component-sibling-mixed/mixed_dependency/unconfigured_dependency/: CMakeLists.txt  unconfigured_dependency.txt
testing/cmake/default_install_component/default_dependency/: CMakeLists.txt
testing/cmake/default_install_component/testing_dependency/: CMakeLists.txt
testing/cmake/write_version-no-combined-version-macro/: CMakeLists.txt  main.cpp
testing/cpm/cpm_find-global-targets-no-values/: CMakeLists.txt
testing/cpm/cpm_find-patch-command-embedded/: CMakeLists.txt  override.json
testing/cpm/cpm_nvtx-install-config-subdir/: CMakeLists.txt
testing/cpm/cpm_nvtx-install-config-subdir/subdir1/: CMakeLists.txt
testing/cpm/cpm_nvtx-install-config-subdir/subdir2/: CMakeLists.txt
testing/cython/create_modules_with_library/: CMakeLists.txt
testing/export/export-verify-build-components-dependencies/: CMakeLists.txt
testing/export/export-verify-global-targets-no-values/: CMakeLists.txt
testing/export/write_language-already-enabled-language/: CMakeLists.txt  main.cu
testing/export/write_language-already-enabled-language/A/: CMakeLists.txt
testing/export/write_language-nested-dirs/: CMakeLists.txt  main.cu
testing/export/write_language-nested-dirs/A/: CMakeLists.txt  static.cu
testing/export/write_language-nested-dirs/A/B/: CMakeLists.txt  static.cu
testing/export/write_language-nested-dirs/A/C/: CMakeLists.txt
testing/find/find_generate_module-build/: CMakeLists.txt
testing/test/add-allocation-throws-runtime-error/: CMakeLists.txt
testing/test/add-single-job-multi-gpu/: CMakeLists.txt
testing/test/install_relocatable-installed-tests-run/: CMakeLists.txt  callback.cpp  main_args.cpp  main_args.cu
(+584 files in other folders)
